# kitty-ecs

./: .gitignore  CMakeLists.txt  imgui.ini
assets/raw/NBSW_SystemPatrolFleet/: readme.txt
assets/scripts/: atlas_gen.py  generate_space.py  old_atlas_gen.py
include/: constants.h  ecs.hpp  math.hpp  primitives.hpp  renderer.hpp
src/: constants.h  ecs.cpp  ecs.hpp  enemy.hpp  engine.cpp  engine.hpp  input.hpp  main.cpp  memory_metrics.cpp  memory_metrics.hpp  path_find.hpp  primitives.cpp  primitives.hpp  renderer.cpp  renderer.hpp  scoped_timer.hpp  shader.cpp  shader.hpp  ships.hpp  window.cpp  window.hpp  world_gen.hpp
src/backups/: ships.hpp
src/shaders/: shader.wgsl
